<resources>

    <string name="app_name" translatable="false">Shhh!</string>

    <!-- ACTIVITY NAMES -->
    <string name="activity_settings">Settings</string>
    <string name="activity_about">About Shhh!</string>

    <!-- PREFERENCES SCREEN -->
    <string name="pref_location_label">LOCATION</string>
    <string name="pref_notification_label">NOTIFICATIONS</string>
    <string name="pref_settings_label">Settings</string>

    <string name="pref_activate_geofences_key" translatable="false">geofencesKey</string>
    <string name="pref_activate_notification_key" translatable="false">notificationKey</string>

    <string name="pref_geofence_enabled">Enabled</string>
    <string name="pref_geofence_disabled">Disabled</string>
    <string name="pref_notification_enabled">Enabled</string>
    <string name="pref_notification_disabled">Disabled</string>
    <string name="pref_geofence_title">Geofences</string>
    <string name="pref_notification_title">Geofences registration</string>
    <string name="pref_radius_title">Geofence radius in meters</string>
    <string name="pref_radius_hint">recommended 50–250</string>

    <!-- PREFERENCES INTERNAL KEYS -->
    <string name="pref_latitude_key" translatable="false">latitudeKey</string>
    <string name="pref_longtitude_key" translatable="false">longtitudeKey</string>
    <string name="pref_georadius_key" translatable="false">radiusKey</string>
    <string name="pref_jobscheduled_key" translatable="false">jobscheduledKey</string>

    <!-- MENU LABELS -->
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_scoreapp">Score Shhh!</string>

    <!-- INFO -->
    <string name="deleteString">Delete</string>
    <string name="deletedString">Deleted!</string>
    <string name="undoString">Undo?</string>

    <!-- ADAPTER -->
    <string name="adapter_delete_ok">Place deleted OK</string>
    <string name="adapter_delete_failed">Place delete failed</string>

    <!-- CONTENT DESCRIPTION -->
    <string name="cd_location">Image of a location icon</string>
    <string name="cd_powered_by">Image of the powered by google icon</string>
    <string name="cd_app">Image of the icon app</string>
    <string name="cd_empty_image">Image of an empty house</string>
    <string name="cd_header">Image of clouds in the sky</string>

    <!-- Strings ERRORS -->
    <string name="no_internet_connection">There is no Internet connection!</string>
    <string name="permission_location">I need the location permission</string>
    <string name="google_play_error">Google Play Services must be installed</string>
    <string name="no_places_in_list">Don\'t you feel lonely?\nAdd a place</string>

    <!-- GEOFENCES -->
    <string name="geofences_enabled">Geofences have been enabled</string>
    <string name="geofences_disabled">Geofences have been disabled</string>

    <string name="geofence_silent_mode">Silent mode activated</string>
    <string name="geofences_touch_to_launch">Touch to launch the app</string>
    <string name="geofences_back_to_normal">Silent mode cancelled :)</string>

    <!-- NOTIFICATION UTILS -->
    <string name="notification_dismiss">Dismiss</string>
    <string name="notification_registration">Geofences re-registered!</string>
    <string name="notification_nextrun">Next run in 24h</string>

    <!-- ABOUT -->
    <string name="about_me" translatable="false">\u00A9 2017 Javier Martín</string>
    <string name="privacy_policy" translatable="false">http://www.google.com/policies/privacy</string>
    <string name="about_info">Shhh! is a useful app that will allow you to pick any place listed under Google Places, and set a Geofence around it so when you enter within a determined radius (selected by you in settings), the app will launch silent mode. When you abandon that area, the app will resume its normal mode.\n\nThis is very useful when entering hospitals, religious places, or any place where you don\'t want to bother other people.\n\nPlease keep in mind sometimes the geofences might not trigger, due to the lack of signal, either network, wireless, or GPS, so DON\’T RELY 100% that your phone will get silent. To get better reliability, make sure Internet is enabled in your phone, as well as Wi-Fi (not necessary to be connected to one though).</string>
    <string name="about_photo_header">Header image credits: NASA</string>

</resources>
