<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/pref_settings_label">

    <PreferenceCategory
        android:title="@string/pref_location_label"
        android:layout="@layout/preference_category">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_activate_geofences_key"
            android:summary="@string/pref_geofence_enabled"
            android:title="@string/pref_geofence_title" />
    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/pref_notification_label"
        android:layout="@layout/preference_category">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_activate_notification_key"
            android:summary="@string/pref_notification_disabled"
            android:title="@string/pref_notification_title" />
    </PreferenceCategory>

</PreferenceScreen>