<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textTitle"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="35sp"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" />
    <TextView
        android:id="@+id/textAboutVersion"
        android:text="@string/about_me"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"/>
    <TextView
        android:id="@+id/textLocation"
        android:text="@string/about_location"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp">
        <ImageView
            android:id="@+id/imageAbout"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="32dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/cd_app" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:autoLink="web"
            android:layout_alignParentBottom="true"
            android:text="@string/privacy_policy"
            android:textAlignment="center" />

    </RelativeLayout>


</LinearLayout>

